@@ -1,3 +1,8 @@
+2014-11-11  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	PR c++/63265
+	* g++.dg/cpp0x/constexpr-63265.C: New.
+
 2014-11-09  H.J. Lu  <hongjiu.lu@intel.com>
 
 	Backported from mainline
